--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="facebook-domain-verification" content="2kc5hfijl8kc02lgpaqci1jesxrl8f" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mukoti Cleaning Services | A Touch of Perfection</title>
@@ -11,35 +10,35 @@
 <body>
 
   <!-- Top Bar -->
-  <div class="topbar">
+  <div class="topbar reveal">
     <div class="container topbar-inner">
       <div class="topbar-left">
         <span class="dot"></span>
         <span>Professional Cleaning • Johannesburg & Surrounding Areas</span>
       </div>
       <div class="topbar-right">
-        <a class="topbar-link" href="#contact">Get a Quote</a>
+        <a class="topbar-link link-hover" href="#contact">Get a Quote</a>
       </div>
     </div>
   </div>
 
   <!-- Header -->
-  <header class="header">
+  <header class="header reveal">
     <div class="container header-inner">
-      <a href="#home" class="brand brand-logo">
+      <a href="#home" class="brand brand-logo interactive" aria-label="Mukoti Cleaning Services">
         <span class="logo-wrap">
           <img id="siteLogo" class="site-logo" src="" alt="Mukoti Cleaning Services" loading="eager" />
         </span>
       </a>
 
       <nav class="nav" id="nav">
-        <a href="#services">Services</a>
-        <a href="#why">Why Us</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact" class="btn btn-small">Contact</a>
+        <a class="link-hover" href="#services">Services</a>
+        <a class="link-hover" href="#why">Why Us</a>
+        <a class="link-hover" href="#gallery">Gallery</a>
+        <a href="#contact" class="btn btn-small interactive">Contact</a>
       </nav>
 
-      <button class="menu-btn" id="menuBtn" aria-label="Open menu">
+      <button class="menu-btn interactive" id="menuBtn" aria-label="Open menu">
         <span></span><span></span><span></span>
       </button>
     </div>
@@ -47,48 +46,50 @@
 
   <!-- Hero -->
   <section class="hero" id="home">
+    <div class="hero-glow" aria-hidden="true"></div>
+
     <div class="container hero-inner">
       <div class="hero-copy">
-        <h1>Cleaning that looks and feels premium.</h1>
-        <p>
+        <h1 class="reveal">Cleaning that looks and feels premium.</h1>
+        <p class="reveal delay-1">
           Mukoti Cleaning Services delivers reliable, high-quality cleaning for homes and businesses:
           carpets, rugs, upholstery, windows, deep cleaning, and pest control.
         </p>
 
-        <div class="hero-actions">
+        <div class="hero-actions reveal delay-2">
           <a
-            class="btn"
+            class="btn interactive"
             href="https://wa.me/27681087266?text=Hello%20Mukoti%20Cleaning%20Services%2C%20I%20would%20like%20to%20request%20a%20quote."
             target="_blank"
             rel="noopener"
           >
             Chat on WhatsApp
           </a>
-          <a class="btn btn-ghost" href="#contact">Request a Quote</a>
-          <a class="btn btn-ghost" href="#services">View Services</a>
+          <a class="btn btn-ghost interactive" href="#contact">Request a Quote</a>
+          <a class="btn btn-ghost interactive" href="#services">View Services</a>
         </div>
 
         <div class="hero-badges">
-          <div class="badge">
+          <div class="badge reveal delay-3 interactive">
             <div class="badge-title">Fast Response</div>
             <div class="badge-text">Same-day slots when available</div>
           </div>
-          <div class="badge">
+          <div class="badge reveal delay-4 interactive">
             <div class="badge-title">Trusted Team</div>
             <div class="badge-text">Professional standards, consistent results</div>
           </div>
-          <div class="badge">
+          <div class="badge reveal delay-5 interactive">
             <div class="badge-title">Residential & Commercial</div>
             <div class="badge-text">Homes, offices, and more</div>
           </div>
         </div>
       </div>
 
-      <div class="hero-card">
+      <div class="hero-card reveal delay-2 interactive">
         <div class="hero-card-top">
           <div class="hero-logo-box" aria-hidden="true">
-  <img id="heroLogo" class="hero-logo" src="" alt="Mukoti Cleaning Services Logo" loading="eager" />
-</div>
+            <img id="heroLogo" class="hero-logo" src="" alt="Mukoti Cleaning Services Logo" loading="eager" />
+          </div>
 
           <div>
             <div class="hero-card-title">A Touch of Perfection</div>
@@ -103,7 +104,7 @@
         </div>
 
         <div class="hero-card-cta">
-          <a class="btn btn-wide" href="#contact">Book Now</a>
+          <a class="btn btn-wide interactive" href="#contact">Book Now</a>
           <p class="small">
             Prefer social media? Message us via Instagram/Facebook/TikTok below.
           </p>
@@ -111,64 +112,78 @@
       </div>
     </div>
 
-    <div class="hero-bg-accent"></div>
+    <div class="hero-bg-accent" aria-hidden="true"></div>
+  </section>
+
+  <!-- ✅ Trusted By (Animated Logos) -->
+  <section class="logo-strip">
+    <div class="container logo-strip-inner reveal">
+      <div class="logo-strip-head">
+        <div class="logo-strip-title">Trusted by</div>
+        <div class="logo-strip-sub">Brands we’ve delivered results for</div>
+      </div>
+
+      <div class="marquee" aria-label="Client logos marquee">
+        <div class="marquee-track" id="clientMarquee"></div>
+      </div>
+    </div>
   </section>
 
   <!-- Services -->
   <section class="section" id="services">
     <div class="container">
-      <div class="section-head">
+      <div class="section-head reveal">
         <h2>Our Services</h2>
         <p>Choose the service you need — we’ll handle the rest.</p>
       </div>
 
       <div class="grid services-grid">
-        <article class="card">
+        <article class="card reveal interactive">
           <h3>Fitted Carpet Cleaning</h3>
           <p>Deep extraction cleaning for wall-to-wall carpets to remove dirt, stains, and odours.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card">
+        <article class="card reveal delay-1 interactive">
           <h3>Loose Rug Cleaning</h3>
           <p>Safe cleaning for loose rugs to lift grime and revive colour and texture.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card">
+        <article class="card reveal delay-2 interactive">
           <h3>Deep Cleaning</h3>
           <p>Detailed cleaning for kitchens, bathrooms, floors, skirtings, and high-touch areas.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card">
+        <article class="card reveal delay-3 interactive">
           <h3>Window Cleaning</h3>
           <p>Streak-free window cleaning for homes, offices, and storefronts.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card">
+        <article class="card reveal delay-4 interactive">
           <h3>Upholstery Cleaning</h3>
           <p>Couches, mattresses, dining chairs — remove stains and refresh fabrics safely.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card">
+        <article class="card reveal delay-5 interactive">
           <h3>Residential & Commercial</h3>
           <p>Regular or once-off cleaning for homes, offices, complexes, and businesses.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card">
+        <article class="card reveal delay-6 interactive">
           <h3>Pest Control</h3>
           <p>Targeted treatment and prevention for common household and commercial pests.</p>
-          <a class="card-link" href="#contact">Get a quote →</a>
+          <a class="card-link link-hover" href="#contact">Get a quote →</a>
         </article>
 
-        <article class="card highlight">
+        <article class="card highlight reveal delay-7 interactive">
           <h3>Custom Packages</h3>
           <p>Combine services for better value. Ideal for move-ins, move-outs, or monthly plans.</p>
-          <a class="card-link" href="#contact">Build a package →</a>
+          <a class="card-link link-hover" href="#contact">Build a package →</a>
         </article>
       </div>
     </div>
@@ -178,14 +193,14 @@
   <section class="section alt" id="why">
     <div class="container why-wrap">
       <div class="why-left">
-        <h2>Why Mukoti Cleaning Services</h2>
-        <p>
+        <h2 class="reveal">Why Mukoti Cleaning Services</h2>
+        <p class="reveal delay-1">
           You want a team that shows up, communicates, and delivers consistent results.
           We focus on quality control and professional presentation — so your space looks its best.
         </p>
 
         <div class="why-points">
-          <div class="why-point">
+          <div class="why-point reveal delay-2 interactive">
             <div class="icon">★</div>
             <div>
               <div class="why-title">Quality-first workmanship</div>
@@ -193,7 +208,7 @@
             </div>
           </div>
 
-          <div class="why-point">
+          <div class="why-point reveal delay-3 interactive">
             <div class="icon">⏱</div>
             <div>
               <div class="why-title">Reliable scheduling</div>
@@ -201,7 +216,7 @@
             </div>
           </div>
 
-          <div class="why-point">
+          <div class="why-point reveal delay-4 interactive">
             <div class="icon">✔</div>
             <div>
               <div class="why-title">Residential & commercial ready</div>
@@ -212,7 +227,7 @@
       </div>
 
       <div class="why-right">
-        <div class="quote-card">
+        <div class="quote-card reveal delay-2 interactive">
           <div class="quote-title">Quick Quote Checklist</div>
           <ul>
             <li>Which service do you need?</li>
@@ -220,7 +235,7 @@
             <li>Size/rooms/items (carpets/couches)</li>
             <li>Any stains or special notes</li>
           </ul>
-          <a class="btn btn-wide" href="#contact">Send Quote Request</a>
+          <a class="btn btn-wide interactive" href="#contact">Send Quote Request</a>
           <p class="small">This demo site can be upgraded with WhatsApp chat, booking calendar, and a full gallery.</p>
         </div>
       </div>
@@ -230,12 +245,12 @@
   <!-- Gallery -->
   <section class="section" id="gallery">
     <div class="container">
-      <div class="section-head">
+      <div class="section-head reveal">
         <h2>Gallery</h2>
         <p>Real results from Mukoti Cleaning Services.</p>
       </div>
 
-      <div class="gallery-toolbar">
+      <div class="gallery-toolbar reveal delay-1">
         <div class="gallery-filters" id="galleryFilters"></div>
       </div>
 
@@ -247,30 +262,30 @@
   <section class="section alt" id="contact">
     <div class="container contact-wrap">
       <div class="contact-left">
-        <h2>Request a Quote</h2>
-        <p>
+        <h2 class="reveal">Request a Quote</h2>
+        <p class="reveal delay-1">
           Fill in the form once. Then choose how you want to send it:
           <strong>Email (sends instantly)</strong> or <strong>WhatsApp</strong>.
         </p>
 
         <div class="contact-cards">
-          <a class="social-card" target="_blank" rel="noopener" href="https://www.instagram.com/mukoticleaning?igsh=aHF4NXZqMTdsM3c2">
+          <a class="social-card reveal delay-2 interactive" target="_blank" rel="noopener" href="https://www.instagram.com/mukoticleaning?igsh=aHF4NXZqMTdsM3c2">
             <div class="social-title">Instagram</div>
             <div class="social-sub">View work & message us</div>
           </a>
 
-          <a class="social-card" target="_blank" rel="noopener" href="https://www.facebook.com/share/1DvFbJwpkK/">
+          <a class="social-card reveal delay-3 interactive" target="_blank" rel="noopener" href="https://www.facebook.com/share/1DvFbJwpkK/">
             <div class="social-title">Facebook</div>
             <div class="social-sub">Updates & posts</div>
           </a>
 
-          <a class="social-card" target="_blank" rel="noopener" href="https://www.tiktok.com/@mukoti.cleaning.se?_r=1&_t=ZS-93AWR82lx36">
+          <a class="social-card reveal delay-4 interactive" target="_blank" rel="noopener" href="https://www.tiktok.com/@mukoti.cleaning.se?_r=1&_t=ZS-93AWR82lx36">
             <div class="social-title">TikTok</div>
             <div class="social-sub">Short videos & results</div>
           </a>
         </div>
 
-        <div class="direct-contact">
+        <div class="direct-contact reveal delay-5">
           <div class="direct-title">Direct contact</div>
           <div class="direct-row"><span>Email:</span> <strong>info@mukoticleaning.co.za</strong></div>
           <div class="direct-row"><span>WhatsApp:</span> <strong>+27 68 108 7266</strong></div>
@@ -278,7 +293,7 @@
       </div>
 
       <div class="contact-right">
-        <form class="form" id="quoteForm">
+        <form class="form reveal delay-2 interactive" id="quoteForm">
           <div class="form-row">
             <label for="name">Full Name</label>
             <input id="name" name="name" type="text" placeholder="Your name" required />
@@ -320,14 +335,10 @@
           </div>
 
           <div class="form-actions">
-            <button class="btn btn-wide" id="sendEmailBtn" type="submit">Send Quote via Email</button>
+            <button class="btn btn-wide interactive" id="sendEmailBtn" type="submit">Send via Email</button>
 
-            <a class="btn btn-ghost btn-wide" id="whatsappQuoteBtn" href="#" target="_blank" rel="noopener">
+            <a class="btn btn-ghost btn-wide interactive" id="whatsappQuoteBtn" href="#" target="_blank" rel="noopener">
               Send via WhatsApp
-            </a>
-
-            <a class="btn btn-ghost btn-wide" id="mailtoBtn" href="#">
-              Open Email App (Backup)
             </a>
           </div>
 
@@ -339,19 +350,19 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container footer-inner">
+    <div class="container footer-inner reveal">
       <div class="footer-left">
         <div class="footer-brand">Mukoti Cleaning Services</div>
         <div class="footer-sub">A touch of perfection</div>
       </div>
       <div class="footer-right">
-        <a href="#services">Services</a>
-        <a href="#why">Why Us</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
+        <a class="link-hover" href="#services">Services</a>
+        <a class="link-hover" href="#why">Why Us</a>
+        <a class="link-hover" href="#gallery">Gallery</a>
+        <a class="link-hover" href="#contact">Contact</a>
       </div>
     </div>
-    <div class="container footer-bottom">
+    <div class="container footer-bottom reveal delay-1">
       <span>© <span id="year"></span> Mukoti Cleaning Services. All rights reserved.</span>
     </div>
   </footer>
@@ -363,7 +374,7 @@
   <!-- WhatsApp Floating Button -->
   <a
     href="https://wa.me/27681087266?text=Hello%20Mukoti%20Cleaning%20Services%2C%20I%20would%20like%20to%20request%20a%20quote."
-    class="whatsapp-float"
+    class="whatsapp-float interactive"
     target="_blank"
     rel="noopener"
     aria-label="Chat on WhatsApp"
@@ -374,4 +385,3 @@
 
 </body>
 </html>
-
